# LocationBasedSharding

./: Cargo.toml  Dockerfile  README.md  shard.json
src/: cell_list.rs  geoshard.rs  lib.rs  users.rs
