[package]
name = "location_based_sharding"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Right sized sharding algorithm"
authors = ["Stephen Leyva <sleyva1297@gmail.com>"]
documentation = "https://docs.rs/location_based_sharding"
keywords = ["sharding", "distributed_systems"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
s2 = "0.0"
serde_json = "~1"
serde = "1.0"
serde_derive = "^1.0.8"

[dev_dependencies]
rand = "0.8.4"